<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="future simple"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="czas przyszły"
            android:textAllCaps="true"
            android:textStyle="italic|bold"
            android:textColor="@color/white"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/application17"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="12sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/application18"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="12sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/application19"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="12sp"/>



    </LinearLayout>
</ScrollView>